syntax = "proto3";

option go_package = "proto/";

package models;

service UserService {
    rpc CheckUser (UserRequest) returns (UserResponse);
    rpc CheckRelation (RelationRequest) returns (RelationResponse);
    rpc ChangeAvatar (AvatarRequest) returns (AvatarResponse);
    rpc CheckUsersTransactions (CheckTransactionRequest) returns (TransactionResponse);
    rpc MakeTransaction (TransactionRequest) returns (NewTransactionResponse);
}

message UserRequest {
    string ID = 1;
}

message UserResponse {
    bool exits = 1;
    bool active = 2;
}

message RelationRequest {
    string fromUsername = 1;
    string toUsername = 2;
}

message RelationResponse {
    bool exits = 1;
}

message AvatarRequest {
    string ID = 1;
    string url = 2;
}

message AvatarResponse {
    bool sucess = 1;
}

message TransactionRequest {
    string fromID = 1;
    string toID = 2;
    double amount = 3;
}

message CheckTransactionRequest {
    string fromID = 1;
    string toID = 2;
    double amount = 3;
    string password = 4;
}

message TransactionResponse {
    bool exits = 1;
    bool actives = 2;
    bool enough = 3;
}

message NewTransactionResponse {
    bool sucess = 1;
}